feat: built out frontend for the app and created new backend api functionality

--- a/data/scraper.ipynb
+++ b/data/scraper.ipynb
@@ -2,32 +2,355 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import data_scraper as ds"
+    "import scraper as ds\n",
+    "import pandas as pd\n",
+    "import explorer as de\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Getting the data which doesn't have null values\n",
+    "data = ds.dataScraperRecipeLink(123)\n",
+    "df = pd.DataFrame(data)\n",
+    "df = df.dropna()\n",
+    "df.reset_index(inplace=True, drop=True)\n",
+    "df.to_csv(\"data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "get_recipe_links() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Aranan.wijayasooria\\Documents\\personal-projects\\budget-bytes-4-me\\data\\scraper.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Aranan.wijayasooria/Documents/personal-projects/budget-bytes-4-me/data/scraper.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ds\u001b[39m.\u001b[39;49mget_recipe_links(\u001b[39m3\u001b[39;49m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: get_recipe_links() takes 0 positional arguments but 1 was given"
-     ]
+     "data": {
+      "text/plain": [
+       "{'prep_time_mins': {'min': 0, 'max': 1080},\n",
+       " 'cook_time_mins': {'min': 0, 'max': 480},\n",
+       " 'total_time_mins': {'min': 0, 'max': 1125},\n",
+       " 'servings': {'min': 1.0, 'max': 50.0},\n",
+       " 'protien_per_serving_grams': {'min': 0.0, 'max': 157.28},\n",
+       " 'carbs_per_serving_grams': {'min': 0.25, 'max': 315.1},\n",
+       " 'calories_per_serving_kcal': {'min': 5.0, 'max': 2679.5},\n",
+       " 'fat_per_serving_grams': {'min': 0.0, 'max': 257.38},\n",
+       " 'sodium_per_serving_mg': {'min': 1.0, 'max': 3554.0},\n",
+       " 'fiber_per_serving_mg': {'min': 0.0, 'max': 39.66}}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds.get_recipe_links(no_of_pages=3)"
+    "de.find_min_max_values(df)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "      <th>prep_time_mins</th>\n",
+       "      <th>cook_time_mins</th>\n",
+       "      <th>total_time_mins</th>\n",
+       "      <th>servings</th>\n",
+       "      <th>protien_per_serving_grams</th>\n",
+       "      <th>carbs_per_serving_grams</th>\n",
+       "      <th>calories_per_serving_kcal</th>\n",
+       "      <th>fat_per_serving_grams</th>\n",
+       "      <th>sodium_per_serving_mg</th>\n",
+       "      <th>fiber_per_serving_mg</th>\n",
+       "      <th>ingredients_for_servings_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>https://www.budgetbytes.com/gingerbread-cookies/</td>\n",
+       "      <td>30</td>\n",
+       "      <td>16</td>\n",
+       "      <td>166</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>29.00</td>\n",
+       "      <td>178.00</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>147.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>['12 salted butter, room temperature', '3/4 br...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>https://www.budgetbytes.com/homemade-cinnamon-...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>130</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>403.00</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>310.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>['1/2 hot water (100-110ºF)', '2 dry yeast*', ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>https://www.budgetbytes.com/caramel-apples/</td>\n",
+       "      <td>30</td>\n",
+       "      <td>15</td>\n",
+       "      <td>45</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>65.00</td>\n",
+       "      <td>449.00</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>138.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>['6 apples (about ⅓ lb. each)', '1 granulated ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>https://www.budgetbytes.com/chocolate-cream-pie/</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>300</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>63.00</td>\n",
+       "      <td>552.00</td>\n",
+       "      <td>30.00</td>\n",
+       "      <td>203.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>['3 whole milk', '1 granulated sugar', '3 eggs...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>https://www.budgetbytes.com/cabbage-rolls/</td>\n",
+       "      <td>45</td>\n",
+       "      <td>90</td>\n",
+       "      <td>132</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>28.00</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>355.00</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>1179.00</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>['1 cabbage', '1 olive oil', '2 large onions, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1334</th>\n",
+       "      <td>https://www.budgetbytes.com/teriyaki-pork-sand...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>480</td>\n",
+       "      <td>510</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>37.59</td>\n",
+       "      <td>44.25</td>\n",
+       "      <td>544.65</td>\n",
+       "      <td>23.18</td>\n",
+       "      <td>1737.41</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>['3 pork butt roast, boston butt', '1 medium s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1339</th>\n",
+       "      <td>https://www.budgetbytes.com/lobster-cream-chee...</td>\n",
+       "      <td>40</td>\n",
+       "      <td>20</td>\n",
+       "      <td>60</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.91</td>\n",
+       "      <td>31.50</td>\n",
+       "      <td>263.80</td>\n",
+       "      <td>11.25</td>\n",
+       "      <td>478.61</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>['8 cream cheese or Neufchatel', '8 imitation ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1341</th>\n",
+       "      <td>https://www.budgetbytes.com/dolmas-stuffed-gra...</td>\n",
+       "      <td>45</td>\n",
+       "      <td>30</td>\n",
+       "      <td>75</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.91</td>\n",
+       "      <td>26.23</td>\n",
+       "      <td>168.54</td>\n",
+       "      <td>5.95</td>\n",
+       "      <td>694.43</td>\n",
+       "      <td>2.24</td>\n",
+       "      <td>['1 40 each grape leaves ', '1 medium yellow o...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1348</th>\n",
+       "      <td>https://www.budgetbytes.com/pork-ginger-pot-st...</td>\n",
+       "      <td>45</td>\n",
+       "      <td>30</td>\n",
+       "      <td>75</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>7.02</td>\n",
+       "      <td>22.88</td>\n",
+       "      <td>178.36</td>\n",
+       "      <td>6.52</td>\n",
+       "      <td>481.45</td>\n",
+       "      <td>2.06</td>\n",
+       "      <td>['1/2 ground pork ', '1 small head green cabba...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1349</th>\n",
+       "      <td>https://www.budgetbytes.com/stuffed-poblano-pe...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>90</td>\n",
+       "      <td>120</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>13.53</td>\n",
+       "      <td>47.75</td>\n",
+       "      <td>290.52</td>\n",
+       "      <td>5.08</td>\n",
+       "      <td>921.68</td>\n",
+       "      <td>9.80</td>\n",
+       "      <td>['1 uncooked long grain rice ', '2 cubes bulli...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>93 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    url  prep_time_mins  \\\n",
+       "5      https://www.budgetbytes.com/gingerbread-cookies/              30   \n",
+       "6     https://www.budgetbytes.com/homemade-cinnamon-...              30   \n",
+       "22          https://www.budgetbytes.com/caramel-apples/              30   \n",
+       "30     https://www.budgetbytes.com/chocolate-cream-pie/              30   \n",
+       "93           https://www.budgetbytes.com/cabbage-rolls/              45   \n",
+       "...                                                 ...             ...   \n",
+       "1334  https://www.budgetbytes.com/teriyaki-pork-sand...              30   \n",
+       "1339  https://www.budgetbytes.com/lobster-cream-chee...              40   \n",
+       "1341  https://www.budgetbytes.com/dolmas-stuffed-gra...              45   \n",
+       "1348  https://www.budgetbytes.com/pork-ginger-pot-st...              45   \n",
+       "1349  https://www.budgetbytes.com/stuffed-poblano-pe...              30   \n",
+       "\n",
+       "      cook_time_mins  total_time_mins  servings  protien_per_serving_grams  \\\n",
+       "5                 16              166      24.0                       2.00   \n",
+       "6                 30              130       9.0                       4.00   \n",
+       "22                15               45       6.0                       1.00   \n",
+       "30                30              300       8.0                      10.00   \n",
+       "93                90              132       8.0                      28.00   \n",
+       "...              ...              ...       ...                        ...   \n",
+       "1334             480              510       8.0                      37.59   \n",
+       "1339              20               60       8.0                       8.91   \n",
+       "1341              30               75      10.0                       2.91   \n",
+       "1348              30               75      13.0                       7.02   \n",
+       "1349              90              120       6.0                      13.53   \n",
+       "\n",
+       "      carbs_per_serving_grams  calories_per_serving_kcal  \\\n",
+       "5                       29.00                     178.00   \n",
+       "6                       58.00                     403.00   \n",
+       "22                      65.00                     449.00   \n",
+       "30                      63.00                     552.00   \n",
+       "93                      23.00                     355.00   \n",
+       "...                       ...                        ...   \n",
+       "1334                    44.25                     544.65   \n",
+       "1339                    31.50                     263.80   \n",
+       "1341                    26.23                     168.54   \n",
+       "1348                    22.88                     178.36   \n",
+       "1349                    47.75                     290.52   \n",
+       "\n",
+       "      fat_per_serving_grams  sodium_per_serving_mg  fiber_per_serving_mg  \\\n",
+       "5                      6.00                 147.00                  1.00   \n",
+       "6                     18.00                 310.00                  1.00   \n",
+       "22                    23.00                 138.00                  4.00   \n",
+       "30                    30.00                 203.00                  4.00   \n",
+       "93                    18.00                1179.00                  5.00   \n",
+       "...                     ...                    ...                   ...   \n",
+       "1334                  23.18                1737.41                  1.79   \n",
+       "1339                  11.25                 478.61                  1.16   \n",
+       "1341                   5.95                 694.43                  2.24   \n",
+       "1348                   6.52                 481.45                  2.06   \n",
+       "1349                   5.08                 921.68                  9.80   \n",
+       "\n",
+       "                          ingredients_for_servings_size  \n",
+       "5     ['12 salted butter, room temperature', '3/4 br...  \n",
+       "6     ['1/2 hot water (100-110ºF)', '2 dry yeast*', ...  \n",
+       "22    ['6 apples (about ⅓ lb. each)', '1 granulated ...  \n",
+       "30    ['3 whole milk', '1 granulated sugar', '3 eggs...  \n",
+       "93    ['1 cabbage', '1 olive oil', '2 large onions, ...  \n",
+       "...                                                 ...  \n",
+       "1334  ['3 pork butt roast, boston butt', '1 medium s...  \n",
+       "1339  ['8 cream cheese or Neufchatel', '8 imitation ...  \n",
+       "1341  ['1 40 each grape leaves ', '1 medium yellow o...  \n",
+       "1348  ['1/2 ground pork ', '1 small head green cabba...  \n",
+       "1349  ['1 uncooked long grain rice ', '2 cubes bulli...  \n",
+       "\n",
+       "[93 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
    ]
   }
  ],
